eliminacion y actualizacion terminada

--- a/Presentacion/FormMenu.resx
+++ b/Presentacion/FormMenu.resx
@@ -650,6 +650,9 @@
         Nr6Nb+Pb+Da+jW/j2/g2voVuQvw/BtJeHshQwrsAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="horaFecha.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAAAAAAAEAIABH7AAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAAAAFv
